// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alova template > snapshot tests > should match snapshot for commonjs type 1`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
const { createAlova } = require('alova');
const adapterFetch = require('alova/fetch');

const alovaInstance = createAlova({
  baseURL: 'http://petstore.swagger.io/v2',
  requestAdapter: adapterFetch(),
  beforeRequest: method => {},
  responded: (res, method) => (method.config?.blob ? res.blob() : res.json())
});

module.exports = { alovaInstance };
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 2`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
function buildPayload(url, defaultConfig, apiName, config) {
  const mergedConfig = {
    ...defaultConfig[apiName],
    ...config
  };
  const pathParams = mergedConfig.pathParams;
  const urlReplaced = url.replace(/\\{([^}]+)\\}/g, (_, key) => {
    return pathParams?.[key] ?? _;
  });
  delete mergedConfig.pathParams;
  let data = mergedConfig.data;
  if (Object.prototype.toString.call(data) === '[object Object]' && typeof FormData !== 'undefined') {
    let hasBlobData = false;
    const formData = new FormData();
    for (const key in data) {
      formData.append(key, data[key]);
      if (data[key] instanceof Blob) {
        hasBlobData = true;
      }
    }
    data = hasBlobData ? formData : data;
  }
  return { url: urlReplaced, data, mergedConfig };
}

/**
 * @template {Record<string, (config: any) => any>} TagedMap
 * @template {{ [K in keyof TagedMap]?: Partial<Parameters<TagedMap[K]>[0]> }} ConfigMap
 * @param {TagedMap} _ - tagged api map (unused at runtime)
 * @param {ConfigMap} configMap - default config per api name
 * @returns {ConfigMap}
 */
const setMethodDefaultConfig = (_, configMap) => configMap;

module.exports = { buildPayload, setMethodDefaultConfig };
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 3`] = `
"import type { alovaInstance } from './index.cjs';
import type { Alova, AlovaGenerics, AlovaMethodCreateConfig, Method } from 'alova';

type CollapsedAlova = typeof alovaInstance;

export type Alova2MethodConfig<Responded> = CollapsedAlova extends Alova<
  AlovaGenerics<
    any,
    any,
    infer RequestConfig,
    infer Response,
    infer ResponseHeader,
    infer L1Cache,
    infer L2Cache,
    infer SE
  >
>
  ? Omit<
      AlovaMethodCreateConfig<
        AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>,
        any,
        Responded
      >,
      'params'
    >
  : never;

export type Alova2Method<Responded> = CollapsedAlova extends Alova<
  AlovaGenerics<
    any,
    any,
    infer RequestConfig,
    infer Response,
    infer ResponseHeader,
    infer L1Cache,
    infer L2Cache,
    infer SE
  >
>
  ? Method<
      AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>
    >
  : never;
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 4`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact: 
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
export interface ApiResponse  {
  code?: number
  type?: string
  message?: string
}
export interface Category  {
  id?: number
  name?: string
}
export interface Order  {
  id?: number
  petId?: number
  quantity?: number
  shipDate?: string
  /**
  * Order Status
   */
  
  status?: "placed" | "approved" | "delivered"
  complete?: boolean
}
export interface Pet  {
  id?: number
  /**
  * Pet category
  * ---
  * A category for a pet
   */
  
  category?: Category
  name: string
  photoUrls: string[]
  tags?: Tag[]
  /**
  * pet status in the store
  * @deprecated
   */
  
  status?: "available" | "pending" | "sold"
}
export interface Tag  {
  id?: number
  name?: string
}
export interface User  {
  id?: number
  username?: string
  firstName?: string
  lastName?: string
  email?: string
  password?: string
  phone?: string
  /**
  * User Status
   */
  
  userStatus?: number
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 5`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
const { setMethodDefaultConfig } = require('../helper.cjs');
const tag = require('./tag.cjs');
const pet = require('./pet.cjs');
const store = require('./store.cjs');
const user = require('./user.cjs');

const tagDefaultConfig = setMethodDefaultConfig(tag, {});
const petDefaultConfig = setMethodDefaultConfig(pet, {});
const storeDefaultConfig = setMethodDefaultConfig(store, {});
const userDefaultConfig = setMethodDefaultConfig(user, {});

module.exports.tagDefaultConfig = tagDefaultConfig;
module.exports.petDefaultConfig = petDefaultConfig;
module.exports.storeDefaultConfig = storeDefaultConfig;
module.exports.userDefaultConfig = userDefaultConfig;
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 6`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload } = require('../helper.cjs');
const _index = require('./index.cjs');

/**
 * ---
 *
 * [PUT] Update an existing pet 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
function updatePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', _index.petDefaultConfig, updatePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by status
 *
 * **path:** /pet/findByStatus
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Status values that need to be considered for filter
 *   // [items] start
 *   // [items] end
 *   // [deprecated]
 *   status: ("available" | "pending" | "sold")[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
function findPetsByStatus(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/findByStatus',
    _index.petDefaultConfig,
    findPetsByStatus.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by tags
 *
 * **path:** /pet/findByTags
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Tags to filter by
 *   // [items] start
 *   // [items] end
 *   tags: string[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
function findPetsByTags(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/findByTags',
    _index.petDefaultConfig,
    findPetsByTags.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Find pet by ID
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to return
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
function getPetById(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', _index.petDefaultConfig, getPetById.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Updates a pet in the store with form data
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be updated
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Updated name of the pet
 *   name?: string
 *   // Updated status of the pet
 *   status?: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function updatePetWithForm(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/{petId}',
    _index.petDefaultConfig,
    updatePetWithForm.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [DELETE] Deletes a pet
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // Pet id to delete
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function deletePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', _index.petDefaultConfig, deletePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

/**
 * ---
 *
 * [POST] uploads an image
 *
 * **path:** /pet/{petId}/uploadImage
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to update
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Additional data to pass to server
 *   additionalMetadata?: string
 *   // file to upload
 *   file?: Blob
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   code?: number
 *   type?: string
 *   message?: string
 * }
 * \`\`\`
 *
 */
function uploadFile(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/{petId}/uploadImage',
    _index.petDefaultConfig,
    uploadFile.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

module.exports = {
  updatePet,
  findPetsByStatus,
  findPetsByTags,
  getPetById,
  updatePetWithForm,
  deletePet,
  uploadFile
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 7`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload } = require('../helper.cjs');
const _index = require('./index.cjs');

/**
 * ---
 *
 * [GET] Returns pet inventories by status
 *
 * **path:** /store/inventory
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Record<string, number>
 * \`\`\`
 *
 */
function getInventory(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/inventory',
    _index.storeDefaultConfig,
    getInventory.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Place an order for a pet
 *
 * **path:** /store/order
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
function placeOrder(config) {
  const { url, data, mergedConfig } = buildPayload('/store/order', _index.storeDefaultConfig, placeOrder.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Find purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be fetched
 *   orderId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
function getOrderById(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    _index.storeDefaultConfig,
    getOrderById.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [DELETE] Delete purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of the order that needs to be deleted
 *   orderId: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function deleteOrder(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    _index.storeDefaultConfig,
    deleteOrder.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

module.exports = {
  getInventory,
  placeOrder,
  getOrderById,
  deleteOrder
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 8`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload } = require('../helper.cjs');
const _index = require('./index.cjs');

/**
 * ---
 *
 * [POST] Add a new pet to the store 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
function pet24(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', _index.tagDefaultConfig, pet24.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

module.exports = {
  pet24
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for commonjs type 9`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
const { alovaInstance } = require('../index.cjs');
const { buildPayload } = require('../helper.cjs');
const _index = require('./index.cjs');

/**
 * ---
 *
 * [POST] Create user
 *
 * **path:** /user
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function createUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user', _index.userDefaultConfig, createUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithArray
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function createUsersWithArrayInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithArray',
    _index.userDefaultConfig,
    createUsersWithArrayInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithList
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function createUsersWithListInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithList',
    _index.userDefaultConfig,
    createUsersWithListInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Logs user into the system
 *
 * **path:** /user/login
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // The user name for login
 *   username: string
 *   // The password for login in clear text
 *   password: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = string
 * \`\`\`
 *
 */
function loginUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/login', _index.userDefaultConfig, loginUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Logs out current logged in user session
 *
 * **path:** /user/logout
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
function logoutUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/logout', _index.userDefaultConfig, logoutUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Get user by user name
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be fetched. Use user1 for testing.
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 */
function getUserByName(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/{username}',
    _index.userDefaultConfig,
    getUserByName.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [PUT] Updated user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // name that need to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function updateUser(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/{username}',
    _index.userDefaultConfig,
    updateUser.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [DELETE] Delete user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
function deleteUser(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/{username}',
    _index.userDefaultConfig,
    deleteUser.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

module.exports = {
  createUser,
  createUsersWithArrayInput,
  createUsersWithListInput,
  loginUser,
  logoutUser,
  getUserByName,
  updateUser,
  deleteUser
};
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 1`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { createAlova } from 'alova';
import adapterFetch from 'alova/fetch';

export const alovaInstance = createAlova({
  baseURL: 'http://petstore.swagger.io/v2',
  requestAdapter: adapterFetch(),
  beforeRequest: method => {},
  responded: (res, method) => (method.config?.blob ? res.blob() : res.json())
});
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 2`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
export function buildPayload(url, defaultConfig, apiName, config) {
  const mergedConfig = {
    ...defaultConfig[apiName],
    ...config
  };
  const pathParams = mergedConfig.pathParams;
  const urlReplaced = url.replace(/\\{([^}]+)\\}/g, (_, key) => {
    return pathParams?.[key] ?? _;
  });
  delete mergedConfig.pathParams;
  let data = mergedConfig.data;
  if (Object.prototype.toString.call(data) === '[object Object]' && typeof FormData !== 'undefined') {
    let hasBlobData = false;
    const formData = new FormData();
    for (const key in data) {
      formData.append(key, data[key]);
      if (data[key] instanceof Blob) {
        hasBlobData = true;
      }
    }
    data = hasBlobData ? formData : data;
  }
  return { url: urlReplaced, data, mergedConfig };
}

/**
 * @template {Record<string, (config: any) => any>} TagedMap
 * @template {{ [K in keyof TagedMap]?: Partial<Parameters<TagedMap[K]>[0]> }} ConfigMap
 * @param {TagedMap} _ - tagged api map (unused at runtime)
 * @param {ConfigMap} configMap - default config per api name
 * @returns {ConfigMap}
 */
export const setMethodDefaultConfig = (_, configMap) => configMap;
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 3`] = `
"import type { alovaInstance } from './index';
import type { Alova, AlovaGenerics, AlovaMethodCreateConfig, Method } from 'alova';

type CollapsedAlova = typeof alovaInstance;

export type Alova2MethodConfig<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Omit<
        AlovaMethodCreateConfig<
          AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>,
          any,
          Responded
        >,
        'params'
      >
    : never;

export type Alova2Method<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Method<AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>>
    : never;
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 4`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
export interface ApiResponse {
  code?: number;
  type?: string;
  message?: string;
}
export interface Category {
  id?: number;
  name?: string;
}
export interface Order {
  id?: number;
  petId?: number;
  quantity?: number;
  shipDate?: string;
  /**
   * Order Status
   */

  status?: 'placed' | 'approved' | 'delivered';
  complete?: boolean;
}
export interface Pet {
  id?: number;
  /**
   * Pet category
   * ---
   * A category for a pet
   */

  category?: Category;
  name: string;
  photoUrls: string[];
  tags?: Tag[];
  /**
   * pet status in the store
   * @deprecated
   */

  status?: 'available' | 'pending' | 'sold';
}
export interface Tag {
  id?: number;
  name?: string;
}
export interface User {
  id?: number;
  username?: string;
  firstName?: string;
  lastName?: string;
  email?: string;
  password?: string;
  phone?: string;
  /**
   * User Status
   */

  userStatus?: number;
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 5`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { setMethodDefaultConfig } from '../helper.js';
import * as tag from './tag.js';
import * as pet from './pet.js';
import * as store from './store.js';
import * as user from './user.js';

export const tagDefaultConfig = setMethodDefaultConfig(tag, {});
export const petDefaultConfig = setMethodDefaultConfig(pet, {});
export const storeDefaultConfig = setMethodDefaultConfig(store, {});
export const userDefaultConfig = setMethodDefaultConfig(user, {});
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 6`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload } from '../helper.js';
import { petDefaultConfig } from './index.js';

/**
 * ---
 *
 * [PUT] Update an existing pet 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function updatePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', petDefaultConfig, updatePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by status
 *
 * **path:** /pet/findByStatus
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Status values that need to be considered for filter
 *   // [items] start
 *   // [items] end
 *   // [deprecated]
 *   status: ("available" | "pending" | "sold")[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByStatus(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/findByStatus',
    petDefaultConfig,
    findPetsByStatus.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Finds Pets by tags
 *
 * **path:** /pet/findByTags
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Tags to filter by
 *   // [items] start
 *   // [items] end
 *   tags: string[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByTags(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/findByTags', petDefaultConfig, findPetsByTags.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Find pet by ID
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to return
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function getPetById(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, getPetById.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Updates a pet in the store with form data
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be updated
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Updated name of the pet
 *   name?: string
 *   // Updated status of the pet
 *   status?: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updatePetWithForm(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, updatePetWithForm.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [DELETE] Deletes a pet
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // Pet id to delete
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deletePet(config) {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, deletePet.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

/**
 * ---
 *
 * [POST] uploads an image
 *
 * **path:** /pet/{petId}/uploadImage
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to update
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Additional data to pass to server
 *   additionalMetadata?: string
 *   // file to upload
 *   file?: Blob
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   code?: number
 *   type?: string
 *   message?: string
 * }
 * \`\`\`
 *
 */
export function uploadFile(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/{petId}/uploadImage',
    petDefaultConfig,
    uploadFile.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 7`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload } from '../helper.js';
import { storeDefaultConfig } from './index.js';

/**
 * ---
 *
 * [GET] Returns pet inventories by status
 *
 * **path:** /store/inventory
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Record<string, number>
 * \`\`\`
 *
 */
export function getInventory(config) {
  const { url, data, mergedConfig } = buildPayload('/store/inventory', storeDefaultConfig, getInventory.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [POST] Place an order for a pet
 *
 * **path:** /store/order
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function placeOrder(config) {
  const { url, data, mergedConfig } = buildPayload('/store/order', storeDefaultConfig, placeOrder.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Find purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be fetched
 *   orderId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function getOrderById(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    getOrderById.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [DELETE] Delete purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of the order that needs to be deleted
 *   orderId: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteOrder(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    deleteOrder.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 8`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload } from '../helper.js';
import { tagDefaultConfig } from './index.js';

/**
 * ---
 *
 * [POST] Add a new pet to the store 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function pet24(config) {
  const { url, data, mergedConfig } = buildPayload('/pet', tagDefaultConfig, pet24.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for module type 9`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index.js';
import { buildPayload } from '../helper.js';
import { userDefaultConfig } from './index.js';

/**
 * ---
 *
 * [POST] Create user
 *
 * **path:** /user
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user', userDefaultConfig, createUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithArray
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithArrayInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithArray',
    userDefaultConfig,
    createUsersWithArrayInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithList
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithListInput(config) {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithList',
    userDefaultConfig,
    createUsersWithListInput.name,
    config
  );
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

/**
 * ---
 *
 * [GET] Logs user into the system
 *
 * **path:** /user/login
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // The user name for login
 *   username: string
 *   // The password for login in clear text
 *   password: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = string
 * \`\`\`
 *
 */
export function loginUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/login', userDefaultConfig, loginUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Logs out current logged in user session
 *
 * **path:** /user/logout
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function logoutUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/logout', userDefaultConfig, logoutUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [GET] Get user by user name
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be fetched. Use user1 for testing.
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 */
export function getUserByName(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, getUserByName.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

/**
 * ---
 *
 * [PUT] Updated user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // name that need to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updateUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, updateUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

/**
 * ---
 *
 * [DELETE] Delete user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteUser(config) {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, deleteUser.name, config);
  return alovaInstance.Request({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 1`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { createAlova } from 'alova';
import fetchAdapter from 'alova/fetch';

export const alovaInstance = createAlova({
  baseURL: 'http://petstore.swagger.io/v2',
  requestAdapter: fetchAdapter(),
  beforeRequest: method => {},
  responded: (res, method) => {
    return method.meta?.blob ? res.blob() : res.json();
  }
});
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 2`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
export function buildPayload(url: string, defaultConfig: Record<string, any>, apiName: string, config: any) {
  const mergedConfig = {
    ...defaultConfig[apiName],
    ...config
  };
  const pathParams = mergedConfig.pathParams;
  const urlReplaced = url.replace(/\\{([^}]+)\\}/g, (_, key) => {
    return pathParams?.[key] ?? _;
  });
  delete mergedConfig.pathParams;
  let data = mergedConfig.data;
  if (Object.prototype.toString.call(data) === '[object Object]' && typeof FormData !== 'undefined') {
    let hasBlobData = false;
    const formData = new FormData();
    for (const key in data) {
      formData.append(key, data[key]);
      if (data[key] instanceof Blob) {
        hasBlobData = true;
      }
    }
    data = hasBlobData ? formData : data;
  }
  return { url: urlReplaced, data, mergedConfig };
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 3`] = `
"import type { alovaInstance } from './index';
import type { Alova, AlovaGenerics, AlovaMethodCreateConfig, Method } from 'alova';

type CollapsedAlova = typeof alovaInstance;

export type Alova2MethodConfig<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Omit<
        AlovaMethodCreateConfig<
          AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>,
          any,
          Responded
        >,
        'params'
      >
    : never;

export type Alova2Method<Responded> =
  CollapsedAlova extends Alova<
    AlovaGenerics<
      any,
      any,
      infer RequestConfig,
      infer Response,
      infer ResponseHeader,
      infer L1Cache,
      infer L2Cache,
      infer SE
    >
  >
    ? Method<AlovaGenerics<Responded, any, RequestConfig, Response, ResponseHeader, L1Cache, L2Cache, SE>>
    : never;
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 4`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
export interface ApiResponse {
  code?: number;
  type?: string;
  message?: string;
}
export interface Category {
  id?: number;
  name?: string;
}
export interface Order {
  id?: number;
  petId?: number;
  quantity?: number;
  shipDate?: string;
  /**
   * Order Status
   */

  status?: 'placed' | 'approved' | 'delivered';
  complete?: boolean;
}
export interface Pet {
  id?: number;
  /**
   * Pet category
   * ---
   * A category for a pet
   */

  category?: Category;
  name: string;
  photoUrls: string[];
  tags?: Tag[];
  /**
   * pet status in the store
   * @deprecated
   */

  status?: 'available' | 'pending' | 'sold';
}
export interface Tag {
  id?: number;
  name?: string;
}
export interface User {
  id?: number;
  username?: string;
  firstName?: string;
  lastName?: string;
  email?: string;
  password?: string;
  phone?: string;
  /**
   * User Status
   */

  userStatus?: number;
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 5`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import type * as tag from './tag';
import type * as pet from './pet';
import type * as store from './store';
import type * as user from './user';

type MethodDefaultConfig<TagedMap extends Record<string, (config: any) => any>> = {
  [K in keyof TagedMap]?: Partial<Parameters<TagedMap[K]>[0]>;
};

export const tagDefaultConfig: MethodDefaultConfig<typeof tag> = {};
export const petDefaultConfig: MethodDefaultConfig<typeof pet> = {};
export const storeDefaultConfig: MethodDefaultConfig<typeof store> = {};
export const userDefaultConfig: MethodDefaultConfig<typeof user> = {};
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 6`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload } from '../helper';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import { petDefaultConfig } from '.';
import type * as ComponentTypes from '../components';

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof petDefaultConfig
    ? (typeof petDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof petDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

interface updatePetExtraConfig {
  data: ComponentTypes.Pet;
}
/**
 * ---
 *
 * [PUT] Update an existing pet 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function updatePet<Config extends Alova2MethodConfig<ComponentTypes.Pet> & updatePetExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'updatePet', ComponentTypes.Pet>> {
  const { url, data, mergedConfig } = buildPayload('/pet', petDefaultConfig, updatePet.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'updatePet', ComponentTypes.Pet>>({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

interface findPetsByStatusExtraConfig {
  params: {
    /**
     * Status values that need to be considered for filter
     * @deprecated
     */

    status: ('available' | 'pending' | 'sold')[];
  };
}
/**
 * ---
 *
 * [GET] Finds Pets by status
 *
 * **path:** /pet/findByStatus
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Status values that need to be considered for filter
 *   // [items] start
 *   // [items] end
 *   // [deprecated]
 *   status: ("available" | "pending" | "sold")[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByStatus<Config extends Alova2MethodConfig<ComponentTypes.Pet[]> & findPetsByStatusExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'findPetsByStatus', ComponentTypes.Pet[]>> {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/findByStatus',
    petDefaultConfig,
    findPetsByStatus.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'findPetsByStatus', ComponentTypes.Pet[]>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface findPetsByTagsExtraConfig {
  params: {
    /**
     * Tags to filter by
     */

    tags: string[];
  };
}
/**
 * ---
 *
 * [GET] Finds Pets by tags
 *
 * **path:** /pet/findByTags
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // Tags to filter by
 *   // [items] start
 *   // [items] end
 *   tags: string[]
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Array<{
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }>
 * \`\`\`
 *
 */
export function findPetsByTags<Config extends Alova2MethodConfig<ComponentTypes.Pet[]> & findPetsByTagsExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'findPetsByTags', ComponentTypes.Pet[]>> {
  const { url, data, mergedConfig } = buildPayload('/pet/findByTags', petDefaultConfig, findPetsByTags.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'findPetsByTags', ComponentTypes.Pet[]>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface getPetByIdExtraConfig {
  pathParams: {
    /**
     * ID of pet to return
     */

    petId: number;
  };
}
/**
 * ---
 *
 * [GET] Find pet by ID
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to return
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function getPetById<Config extends Alova2MethodConfig<ComponentTypes.Pet> & getPetByIdExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'getPetById', ComponentTypes.Pet>> {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, getPetById.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'getPetById', ComponentTypes.Pet>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface updatePetWithFormExtraConfig {
  pathParams: {
    /**
     * ID of pet that needs to be updated
     */

    petId: number;
  };
  data: {
    /**
     * Updated name of the pet
     */

    name?: string;
    /**
     * Updated status of the pet
     */

    status?: string;
  };
}
/**
 * ---
 *
 * [POST] Updates a pet in the store with form data
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be updated
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Updated name of the pet
 *   name?: string
 *   // Updated status of the pet
 *   status?: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updatePetWithForm<Config extends Alova2MethodConfig<unknown> & updatePetWithFormExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'updatePetWithForm', unknown>> {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, updatePetWithForm.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'updatePetWithForm', unknown>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

interface deletePetExtraConfig {
  pathParams: {
    /**
     * ComponentTypes.Pet id to delete
     */

    petId: number;
  };
}
/**
 * ---
 *
 * [DELETE] Deletes a pet
 *
 * **path:** /pet/{petId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // Pet id to delete
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deletePet<Config extends Alova2MethodConfig<unknown> & deletePetExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'deletePet', unknown>> {
  const { url, data, mergedConfig } = buildPayload('/pet/{petId}', petDefaultConfig, deletePet.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'deletePet', unknown>>({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}

interface uploadFileExtraConfig {
  pathParams: {
    /**
     * ID of pet to update
     */

    petId: number;
  };
  data: {
    /**
     * Additional data to pass to server
     */

    additionalMetadata?: string;
    /**
     * file to upload
     */

    file?: Blob;
  };
}
/**
 * ---
 *
 * [POST] uploads an image
 *
 * **path:** /pet/{petId}/uploadImage
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet to update
 *   petId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   // Additional data to pass to server
 *   additionalMetadata?: string
 *   // file to upload
 *   file?: Blob
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   code?: number
 *   type?: string
 *   message?: string
 * }
 * \`\`\`
 *
 */
export function uploadFile<Config extends Alova2MethodConfig<ComponentTypes.ApiResponse> & uploadFileExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'uploadFile', ComponentTypes.ApiResponse>> {
  const { url, data, mergedConfig } = buildPayload(
    '/pet/{petId}/uploadImage',
    petDefaultConfig,
    uploadFile.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'uploadFile', ComponentTypes.ApiResponse>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 7`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload } from '../helper';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import { storeDefaultConfig } from '.';
import type * as ComponentTypes from '../components';

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof storeDefaultConfig
    ? (typeof storeDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof storeDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

interface getInventoryExtraConfig {}
/**
 * ---
 *
 * [GET] Returns pet inventories by status
 *
 * **path:** /store/inventory
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = Record<string, number>
 * \`\`\`
 *
 */
export function getInventory<Config extends Alova2MethodConfig<Record<string, number>> & getInventoryExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'getInventory', Record<string, number>>> {
  const { url, data, mergedConfig } = buildPayload('/store/inventory', storeDefaultConfig, getInventory.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'getInventory', Record<string, number>>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface placeOrderExtraConfig {
  data: ComponentTypes.Order;
}
/**
 * ---
 *
 * [POST] Place an order for a pet
 *
 * **path:** /store/order
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function placeOrder<Config extends Alova2MethodConfig<ComponentTypes.Order> & placeOrderExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'placeOrder', ComponentTypes.Order>> {
  const { url, data, mergedConfig } = buildPayload('/store/order', storeDefaultConfig, placeOrder.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'placeOrder', ComponentTypes.Order>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

interface getOrderByIdExtraConfig {
  pathParams: {
    /**
     * ID of pet that needs to be fetched
     */

    orderId: number;
  };
}
/**
 * ---
 *
 * [GET] Find purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of pet that needs to be fetched
 *   orderId: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   petId?: number
 *   quantity?: number
 *   shipDate?: string
 *   // Order Status
 *   status?: "placed" | "approved" | "delivered"
 *   complete?: boolean
 * }
 * \`\`\`
 *
 */
export function getOrderById<Config extends Alova2MethodConfig<ComponentTypes.Order> & getOrderByIdExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'getOrderById', ComponentTypes.Order>> {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    getOrderById.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'getOrderById', ComponentTypes.Order>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface deleteOrderExtraConfig {
  pathParams: {
    /**
     * ID of the order that needs to be deleted
     */

    orderId: string;
  };
}
/**
 * ---
 *
 * [DELETE] Delete purchase order by ID
 *
 * **path:** /store/order/{orderId}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // ID of the order that needs to be deleted
 *   orderId: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteOrder<Config extends Alova2MethodConfig<unknown> & deleteOrderExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'deleteOrder', unknown>> {
  const { url, data, mergedConfig } = buildPayload(
    '/store/order/{orderId}',
    storeDefaultConfig,
    deleteOrder.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'deleteOrder', unknown>>({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 8`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload } from '../helper';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import { tagDefaultConfig } from '.';
import type * as ComponentTypes from '../components';

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof tagDefaultConfig
    ? (typeof tagDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof tagDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

interface pet24ExtraConfig {
  data: ComponentTypes.Pet;
}
/**
 * ---
 *
 * [POST] Add a new pet to the store 2
 *
 * **path:** /pet
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   // [title] Pet category
 *   // A category for a pet
 *   category?: {
 *     id?: number
 *     name?: string
 *   }
 *   name: string
 *   // [items] start
 *   // [items] end
 *   photoUrls: string[]
 *   // [items] start
 *   // [title] Pet Tag
 *   // A tag for a pet
 *   // [items] end
 *   tags?: Array<{
 *     id?: number
 *     name?: string
 *   }>
 *   // pet status in the store
 *   // [deprecated]
 *   status?: "available" | "pending" | "sold"
 * }
 * \`\`\`
 *
 */
export function pet24<Config extends Alova2MethodConfig<ComponentTypes.Pet> & pet24ExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'pet24', ComponentTypes.Pet>> {
  const { url, data, mergedConfig } = buildPayload('/pet', tagDefaultConfig, pet24.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'pet24', ComponentTypes.Pet>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}
"
`;

exports[`alova template > snapshot tests > should match snapshot for typescript type 9`] = `
"/* tslint:disable */
/* eslint-disable */
/**
 * OpenAPI Petstore - version 1.0.0
 *
 * This is a sample server Petstore server. For this sample, you can use the api key &#x60;special-key&#x60; to test the authorization filters.
 *
 * OpenAPI version: 3.0.0
 *
 * Contact:
 *
 * NOTE: This file is auto generated by the alova's vscode plugin.
 *
 * https://alova.js.org/devtools/vscode
 *
 * **Do not edit the file manually.**
 */
import { alovaInstance } from '../index';
import { buildPayload } from '../helper';
import type { Alova2Method, Alova2MethodConfig } from '../typed';
import { userDefaultConfig } from '.';
import type * as ComponentTypes from '../components';

export type ExtractResponded<
  UserDefinedConfig extends Alova2MethodConfig<any>,
  UnifiedConfigKey extends string,
  Default
> = UserDefinedConfig extends { transform: (...args: any[]) => any }
  ? Awaited<ReturnType<UserDefinedConfig['transform']>>
  : UnifiedConfigKey extends keyof typeof userDefaultConfig
    ? (typeof userDefaultConfig)[UnifiedConfigKey] extends { transform: (...args: any[]) => any }
      ? Awaited<ReturnType<(typeof userDefaultConfig)[UnifiedConfigKey]['transform']>>
      : Default
    : Default;

interface createUserExtraConfig {
  data: ComponentTypes.User;
}
/**
 * ---
 *
 * [POST] Create user
 *
 * **path:** /user
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUser<Config extends Alova2MethodConfig<null> & createUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'createUser', null>> {
  const { url, data, mergedConfig } = buildPayload('/user', userDefaultConfig, createUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'createUser', null>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

interface createUsersWithArrayInputExtraConfig {
  data: ComponentTypes.User[];
}
/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithArray
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithArrayInput<
  Config extends Alova2MethodConfig<null> & createUsersWithArrayInputExtraConfig
>(config: Config): Alova2Method<ExtractResponded<Config, 'createUsersWithArrayInput', null>> {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithArray',
    userDefaultConfig,
    createUsersWithArrayInput.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'createUsersWithArrayInput', null>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

interface createUsersWithListInputExtraConfig {
  data: ComponentTypes.User[];
}
/**
 * ---
 *
 * [POST] Creates list of users with given input array
 *
 * **path:** /user/createWithList
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = Array<{
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }>
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function createUsersWithListInput<Config extends Alova2MethodConfig<null> & createUsersWithListInputExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'createUsersWithListInput', null>> {
  const { url, data, mergedConfig } = buildPayload(
    '/user/createWithList',
    userDefaultConfig,
    createUsersWithListInput.name,
    config
  );
  return alovaInstance.Request<ExtractResponded<Config, 'createUsersWithListInput', null>>({
    ...mergedConfig,
    url,
    data,
    method: 'POST'
  });
}

interface loginUserExtraConfig {
  params: {
    /**
     * The user name for login
     */

    username: string;
    /**
     * The password for login in clear text
     */

    password: string;
  };
}
/**
 * ---
 *
 * [GET] Logs user into the system
 *
 * **path:** /user/login
 *
 * ---
 *
 * **Query Parameters**
 * \`\`\`ts
 * type QueryParameters = {
 *   // The user name for login
 *   username: string
 *   // The password for login in clear text
 *   password: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = string
 * \`\`\`
 *
 */
export function loginUser<Config extends Alova2MethodConfig<string> & loginUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'loginUser', string>> {
  const { url, data, mergedConfig } = buildPayload('/user/login', userDefaultConfig, loginUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'loginUser', string>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface logoutUserExtraConfig {}
/**
 * ---
 *
 * [GET] Logs out current logged in user session
 *
 * **path:** /user/logout
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = null
 * \`\`\`
 *
 */
export function logoutUser<Config extends Alova2MethodConfig<null> & logoutUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'logoutUser', null>> {
  const { url, data, mergedConfig } = buildPayload('/user/logout', userDefaultConfig, logoutUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'logoutUser', null>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface getUserByNameExtraConfig {
  pathParams: {
    /**
     * The name that needs to be fetched. Use user1 for testing.
     */

    username: string;
  };
}
/**
 * ---
 *
 * [GET] Get user by user name
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be fetched. Use user1 for testing.
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 */
export function getUserByName<Config extends Alova2MethodConfig<ComponentTypes.User> & getUserByNameExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'getUserByName', ComponentTypes.User>> {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, getUserByName.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'getUserByName', ComponentTypes.User>>({
    ...mergedConfig,
    url,
    data,
    method: 'GET'
  });
}

interface updateUserExtraConfig {
  pathParams: {
    /**
     * name that need to be deleted
     */

    username: string;
  };
  data: ComponentTypes.User;
}
/**
 * ---
 *
 * [PUT] Updated user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // name that need to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **RequestBody**
 * \`\`\`ts
 * type RequestBody = {
 *   id?: number
 *   username?: string
 *   firstName?: string
 *   lastName?: string
 *   email?: string
 *   password?: string
 *   phone?: string
 *   // User Status
 *   userStatus?: number
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function updateUser<Config extends Alova2MethodConfig<unknown> & updateUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'updateUser', unknown>> {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, updateUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'updateUser', unknown>>({
    ...mergedConfig,
    url,
    data,
    method: 'PUT'
  });
}

interface deleteUserExtraConfig {
  pathParams: {
    /**
     * The name that needs to be deleted
     */

    username: string;
  };
}
/**
 * ---
 *
 * [DELETE] Delete user
 *
 * **path:** /user/{username}
 *
 * ---
 *
 * **Path Parameters**
 * \`\`\`ts
 * type PathParameters = {
 *   // The name that needs to be deleted
 *   username: string
 * }
 * \`\`\`
 *
 * ---
 *
 * **Response**
 * \`\`\`ts
 * type Response = unknown
 * \`\`\`
 *
 */
export function deleteUser<Config extends Alova2MethodConfig<unknown> & deleteUserExtraConfig>(
  config: Config
): Alova2Method<ExtractResponded<Config, 'deleteUser', unknown>> {
  const { url, data, mergedConfig } = buildPayload('/user/{username}', userDefaultConfig, deleteUser.name, config);
  return alovaInstance.Request<ExtractResponded<Config, 'deleteUser', unknown>>({
    ...mergedConfig,
    url,
    data,
    method: 'DELETE'
  });
}
"
`;
